--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -1,4 +1,52 @@
-.header{
-  background: #69F0AE;
-  font-size: 64px;
+
+/* nav -------------------------------- */
+.nav{
+  &-row{
+    display: flex;
+    @include mobile{
+      display: block;
+    }
+  }
+  &-ul{
+    flex-wrap: wrap;
+  }
+  &-li{
+    margin-right: 30px;
+    transition-duration: .3s;
+
+    @include mobile{
+      width: 50%;
+      margin-right: 0;
+      text-align: center;
+      border-top: 1px solid #fff;
+      border-bottom: 1px solid #fff;
+    }
+  }
+  &-li-logo img{
+    padding:11px 0;
+  }
+
+  &-li:hover{
+    background-color: $light;
+    border-radius: 20px;
+    @include mobile{
+      border-radius: 0;
+    }
+  }
+  &-li:hover a{
+    color: $primary;
+  }
+  &-li a{
+    padding: 25px 10px;
+    display: block;
+    font-size: 20px;
+    @include mobile{
+      padding:12px 0;
+    }
+  }
+  &-li:nth-child(1), &-li:nth-child(3){
+    @include mobile{
+      border-right: 1px solid #fff;
+    }
+  }
 }
