--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -1,1 +1,53 @@
-<footer class="footer">我是 footer</footer>
+<footer class="footer bg-primary">
+    <div class="container mx-auto">
+        <div class="footer-head">
+            <div class="footer-head-row">
+                <div class="footer-list">
+                    <ul class="footer-ul d-flex">
+                        <li class="footer-li"><a class="c-white" href="index.html">首頁</a></li>
+                        <li class="footer-li"><a class="c-white" href="categoria1.html">系列鏡框</a></li>
+                        <li class="footer-li"><a class="c-white" href="station.html">門市據點</a></li>
+                        <li class="footer-li"><a class="c-white" href="blog.html">部落格</a></li>
+                        <li class="footer-li"><a class="c-white" href="qa.html">常見問題</a></li>
+                    </ul>
+                </div>
+                <div class="footer-icon">
+                    <a href="#">
+                        <img width="48" height="48" src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic-social-fb.png?raw=true" alt="facebool">
+                    </a>
+                    <a href="#">
+                        <img width="48" height="48" src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic_social_ig.png?raw=true" alt="instagram">
+                    </a>
+                    <a href="#">
+                        <img width="48" height="48" src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/ic_social_line.png?raw=true" alt="line">
+                    </a>
+                </div>
+            </div>
+
+            <div class="footer-middle c-white">
+                <a href="tel:0933333333" class="footer-cellphone d-flex">
+                    <i class="fa-solid fa-phone"></i>
+                    <p>0800-000-000</p>
+                </a>
+                <a href="mailto:example@gmail.com" class="footer-mail d-flex">
+                    <i class="fa-regular fa-envelope"></i> 
+                    <p>glasses@business.com</p>
+                </a>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <ul class="footer-bt-ul d-flex">
+                <li class="footer-bt-li c-white mr-auto">
+                    <small>Copyright © 2020 Glasses.All rights reserved.</small>
+                </li>
+                <li class="footer-bt-li pv-sv c-white">
+                    <a>隱私權政策</a>
+                </li>
+                <li class="footer-bt-li pv-sv c-white">
+                    <a>服務條款</a>
+                </li>
+            </ul>
+        
+        </div>
+    </div>
+</footer>
