--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -1,5 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import './helper/variable';
+@import './helper/utilities';
+@import './helper/mixins';
+
+@import './layout/reset';
 @import './layout/header.scss';
 @import './layout/footer.scss';
-
-
 @import './pages/index.scss';
+@import './pages/article-1';
+@import './pages/blog';
+@import './pages/categoria';
+@import './pages/station';
+@import './pages/qa.scss';
