--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -1,4 +1,110 @@
+/* footer----------------------------------- */
+
 .footer{
-  background: #69F0AE;
-  font-size: 64px;
+  &-head-row{
+    display: flex;
+    justify-content: space-between;
+    padding-top: 60px;
+    align-items: center;
+    @include mobile{
+      padding-top: 0;
+    }
+  }
+
+  &-head{
+    border-bottom: solid 1px $white;
+    @include mobile{
+      display: flex;
+      flex-direction: row-reverse;
+      justify-content: space-between;
+      align-items: start;
+      padding-top: 24px;
+    }
+  }
+
+  &-list{
+    @include mobile{
+      display: none;
+    }
+  }
+
+  &-li{
+    margin-right: 24px;
+  }
+
+  &-li a{
+    display: block;
+  }
+  &-li a:hover,&-icon a:hover,&-cellphone:hover,&-mail:hover{
+    position: relative;
+    top: 2px;
+    left: 2px;
+    color :$light;
+  }
+
+  &-icon img{
+    margin-right: 32px;
+    width: 48px;
+    height: 48px;
+    @include mobile{
+      width: 24px;
+      height: 24px;
+    }
+  }
+
+
+  &-middle{
+    font-size: 36px;
+    margin-top: 36px;
+    margin-bottom: 32px;
+    @include mobile{
+      font-size: 16px;
+      margin-top: 0;
+    }
+  }
+
+  &-middle i{
+    margin-right: 22px;
+  }
+
+  &-cellphone{
+    margin-bottom: 22px;
+  }
+
+  &-cellphone,&-mail{
+    color:$white;
+  }
+
+  &-bottom{
+    padding: 32px 0;
+    @include mobile{
+      padding: 16px 0;
+    }
+  }
+
+  .pv-sv{
+    margin-right: 48px;
+  }
+  @include mobile{
+    padding:0 13px;
+  }
+
+  &-icon img{
+    @include mobile{
+      margin-right: 8px;
+    }
+  }
+
+  &-bt-ul{
+    @include mobile{
+      display: block;
+    }
+  }
+
+  &-bt-li{
+    @include mobile{
+      margin-bottom: 8px;
+    }
+  }
+
 }
