--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -1,4 +1,19 @@
-<h1 class="header">我是 header</h1>
-<a href="index.html">index</a>
-<a href="about.html">about</a>
-<a href="contact.html">contact</a>
+<header>
+    <nav class="nav bg-primary">
+        <div class="container mx-auto">
+            <div class="nav-row">
+                <div class="nav-li-logo mr-auto">
+                    <a class="c-white" href="index.html">
+                        <img width="80" height="48.57" src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/logo-white.png?raw=true" alt="">
+                    </a>
+                </div>
+                <ul class="nav-ul d-flex">
+                    <li class="nav-li"><a class="c-white" href="categoria1.html">系列鏡框</a></li>
+                    <li class="nav-li"><a class="c-white" href="station.html">門市據點</a></li>
+                    <li class="nav-li"><a class="c-white" href="blog.html">部落格</a></li>
+                    <li class="nav-li"><a class="c-white" href="qa.html">常見問題</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</header>
