change-pageStation-btn

--- a/assets/scss/pages/_station.scss
+++ b/assets/scss/pages/_station.scss
@@ -74,6 +74,10 @@
             font-size: 19px;
         }
     }
+    &-card-btn:hover {
+        background: $primary;
+        transition-duration: .3s;
+    }
     
     &-card-btn a{
         display: block;
